tests/machine/x/pl/cross_join_triple.out
ERROR: /workspace/mochi/tests/machine/x/pl/cross_join_triple.pl:11:11: Syntax error: Operator expected

